--- a/templates/hostel_application.html
+++ b/templates/hostel_application.html
@@ -13,8 +13,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 20px;
+            background-color: #eeeeee;
+            height: 100%;
         }
 
         table {
@@ -27,6 +27,14 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+        }
+
+        .navbar {
+            background-color: white;
+        }
+
+        .container {
+            margin-top: 40px;
         }
 
         th, td {
@@ -58,23 +66,105 @@
 </head>
 <body>
 
-    <h1>List of Entries</h1>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>IC</th>
-            <th>Form</th>
-        </tr>
-        {% for entry in entries %}
-        <tr>
-            <td>{{ entry.ID }}</td>
-            <td>{{ entry.studentName }}</td>
-            <td>{{ entry.studentIc }}</td>
-            <td>{{ entry.formClass }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    {% include 'components/navbar.html' %}
+    {% include 'components/hostel_application_modal.html' %}
+    
+    <div class="container">
+        <h3>Hostel Applications</h3>
+        <table border="1">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>IC</th>
+                <th>Form</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+            {% if entries %}
+                {% for entry in entries %}
+                <tr>
+                    <td>{{ entry.ID }}</td>
+                    <td>{{ entry.studentName }}</td>
+                    <td>{{ entry.studentIc }}</td>
+                    <td>{{ entry.formClass }}</td>
+                    <td>{{ entry.applicationStatus }}</td>
+                    <td>
+                        <a class="btn btn-sm btn-outline-success" data-bs-toggle="modal" data-bs-target="#hostelApplicationModal" data-index="{{ loop.index }}">
+                            <i class="fas fa-cog"></i> Manage
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="5">No entries available</td>
+                </tr>
+            {% endif %}
+        </table>
+    </div>
+
+    <script>
+        let selectedEntry = 0;
+        document.addEventListener('DOMContentLoaded', function() {
+            const modal = document.getElementById('hostelApplicationModal');
+
+            const entries = JSON.parse('{{ entries | tojson }}'); 
+    
+            modal.addEventListener('show.bs.modal', function(event) {
+                const button = event.relatedTarget;
+                const index = button.getAttribute('data-index');
+                
+                const entry = entries[index - 1];
+                selectedEntry = entry;
+                document.getElementById('studentName').innerText = entry["studentName"];
+                document.getElementById('studentIc').innerText = entry["studentIc"];
+                document.getElementById('formClass').innerText = entry["formClass"];
+                document.getElementById('stream').innerText = entry["stream"];
+                document.getElementById('race').innerText = entry["race"];
+                document.getElementById('familyMembers').innerText = entry["familyMembers"];
+                document.getElementById('familyStudying').innerText = entry["familyStudying"];
+                document.getElementById('siblingsSPBT').innerText = entry["siblingsSPBT"];
+                document.getElementById('siblingsHostel').innerText = entry["siblingsHostel"];
+                document.getElementById('distance').innerText = entry["distance"];
+                document.getElementById('studentStatus').innerText = entry["studentStatus"];
+                document.getElementById('guardianStatus').innerText = entry["guardianStatus"];
+                document.getElementById('healthStatus').innerText = entry["healthStatus"];
+                document.getElementById('hostelReason').innerText = entry["hostelReason"];
+                document.getElementById('fatherGuardianName').innerText = entry["fatherGuardianName"];
+                document.getElementById('fatherGuardianIc').innerText = entry["fatherGuardianIc"];
+                document.getElementById('fatherCitizenship').innerText = entry["fatherCitizenship"];
+                document.getElementById('fatherGuardianAddress').innerText = entry["fatherGuardianAddress"];
+                document.getElementById('fatherPhoneHome').innerText = entry["fatherPhoneHome"];
+                document.getElementById('fatherPhoneMobile').innerText = entry["fatherPhoneMobile"];
+                document.getElementById('fatherOccupation').innerText = entry["fatherOccupation"];
+                document.getElementById('fatherIncome').innerText = entry["fatherIncome"];
+                document.getElementById('fatherEmployerAddress').innerText = entry["fatherEmployerAddress"];
+                document.getElementById('motherGuardianName').innerText = entry["motherGuardianName"];
+                document.getElementById('motherGuardianIc').innerText = entry["motherGuardianIc"];
+                document.getElementById('motherCitizenship').innerText = entry["motherCitizenship"];
+                document.getElementById('motherGuardianAddress').innerText = entry["motherGuardianAddress"];
+                document.getElementById('motherPhoneHome').innerText = entry["motherPhoneHome"];
+                document.getElementById('motherPhoneMobile').innerText = entry["motherPhoneMobile"];
+                document.getElementById('motherOccupation').innerText = entry["motherOccupation"];
+                document.getElementById('motherIncome').innerText = entry["motherIncome"];
+                document.getElementById('motherEmployerAddress').innerText = entry["motherEmployerAddress"];
+                document.getElementById('UPSRResult').innerText = entry["upsrResults"];
+                document.getElementById('PT3Result').innerText = entry["pmrResults"];
+                document.getElementById('SPMTrialResult').innerText = entry["spmResults"];
+                document.getElementById('scholarship').innerText = entry["scholarship"];
+                document.getElementById('kwapm').innerText = entry["kwapm"];
+                document.getElementById('uniformedUnit').innerText = entry["uniformedUnit"];
+                document.getElementById('uniformedUnitPosition').innerText = entry["uniformedUnitPosition"];
+                document.getElementById('uniformedUnitRepresenting').innerText = entry["uniformedUnitRepresenting"];
+                document.getElementById('clubAssociation').innerText = entry["clubAssociation"];
+                document.getElementById('clubPosition').innerText = entry["clubPosition"];
+                document.getElementById('clubRepresenting').innerText = entry["clubRepresenting"];
+                document.getElementById('sportsGames').innerText = entry["sportsGames"];
+                document.getElementById('sportsPosition').innerText = entry["sportsPosition"];
+                document.getElementById('sportsRepresenting').innerText = entry["sportsRepresenting"];
+            });
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
