--- a/templates/students.html
+++ b/templates/students.html
@@ -62,6 +62,16 @@
         tr:hover {
             background-color: #f1f1f1;
         }
+
+        .btn-custom {
+            background-color: #009879 !important;
+            color: white !important; 
+        }
+
+        .btn-custom:hover {
+            background-color: white !important;
+            color: #009879 !important; 
+        }
     </style>
 </head>
 <body>
@@ -70,7 +80,9 @@
     {% include 'components/hostel_application_modal.html' %}
     
     <div class="container">
+
         <h3>Student Information</h3>
+
         <table border="1">
             <tr>
                 <th>ID</th>
