--- a/templates/test.html
+++ b/templates/test.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" class="index-page">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    {% include 'components/notification_modal.html' %}
-
-    {% if success_message %}
-      <script>
-          window.onload = function() {
-              var successMessage = "{{ success_message }}";
-              var successModal = new bootstrap.Modal(document.getElementById('successModal'));
-
-              if (successMessage) {
-                successModal.show();
-              }
-          };
-      </script>
-    {% endif %}
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <title>Email Test Page</title>
+</head>
+<body>
+    <h1>Email Test Page</h1>
+    <p>Click the button below to send a test email:</p>
+    <form action="{{ url_for('send_email') }}" method="POST">
+        <button type="submit">Send Email</button>
+    </form>
+</body>
 </html>
