--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -118,7 +118,7 @@
                                     <a class="dropdown-item" href="{{ url_for('hostel_application') }}">
                                         <i class="bi bi-journal-text"></i> Hostel Applications
                                     </a>
-                                    <a class="dropdown-item" href="{{ url_for('dashboard') }}">
+                                    <a class="dropdown-item" href="{{ url_for('outing_manager') }}">
                                         <i class="bi bi-journal-text"></i> Outing Applications
                                     </a>
                                 </div>
