--- a/templates/login.html
+++ b/templates/login.html
@@ -173,7 +173,7 @@
                 <form class="login-box" method="POST" action="{{ url_for('login') }}">
                     <div class="login-box-upper">
                         <h1 class="text-login">Log In to continue</h1>
-                        <input type="text" name="username" placeholder="Username" class="form-control form-text form-text-login">
+                        <input type="text" name="ic" placeholder="No. IC" class="form-control form-text form-text-login">
                         <input type="password" name="password" placeholder="Password" class="form-control form-text form-text-login">
                     </div>
                     <input type="submit" value="Log in" class="btn btn-primary btn-login-page-login">
