--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -29,7 +29,7 @@
         border: 1px solid rgb(212, 212, 212);
         border-color: transparent;
         border-radius: 5px;
-        padding: 0;
+        padding: 0 !important;
         font-size: 18px;
         display: flex;
         align-items: center;
@@ -49,17 +49,6 @@
     .btn-login:active, .btn-login:focus {
         background-color: rgb(212, 212, 212) !important;
         border-color: rgb(212, 212, 212) !important;
-    }
-
-    .dropdown-menu {
-        width: 230px;
-        border-radius: 5px;
-        padding: 0;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    }
-
-    .dropdown-menu-login {
-      width: inherit !important;
     }
 
     .dropdown-item {
@@ -154,16 +143,16 @@
                     </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link navbar-text" href="#">Contact Us</a>
+                    <a class="nav-link navbar-text" href="/contact_us">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link navbar-text" href="#">About Us</a>
+                    <a class="nav-link navbar-text" href="/about_us">About Us</a>
                 </li>
             </ul>
             <span class="navbar-text">
                 {% if username %}
                     <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle btn btn-login" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="dynamic-width dropdown-toggle btn btn-login" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {{ username }}
                         </a>
                         <ul class="dropdown-menu-login dropdown-menu dropdown-menu-end">
