--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -162,17 +162,13 @@
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="/static/img/carousel_img_01.jpg" class="d-block w-100 carousel-img" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/static/img/carousel_img_01.jpg" class="d-block w-100 carousel-img" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/static/img/carousel_img_01.jpg" class="d-block w-100 carousel-img" alt="...">
+        <img src="/static/img/carousel_img_02.jpeg" class="d-block w-100 carousel-img" alt="...">
       </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -193,6 +189,7 @@
         <a href="{{ url_for('application') }}" class="btn btn-apply navbar-text">Join Us Now!</a>
         {% endif %}
       </div>
+      <div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
